--- a/index.html
+++ b/index.html
@@ -38,205 +38,184 @@
             </div>
         </nav>
     </header>
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./imagenes/torontocanada2.jpg" class="d-block w-100" alt="toronto" width="430px"
-                    height="500px">
-                <p>TORONTO CANADA</p>
-            </div>
-            <div class="carousel-item">
-                <img src="./imagenes/paris.jpg" class="d-block w-100" alt="paris" width="430px" height="500px">
-                <p>PARIS FRANCIA</p>
-            </div>
-            <div class="carousel-item">
+    <main>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./imagenes/Moscow-Russia.jpg" class="d-block w-100" alt="cancun" width="430px"
+                    <img src="./imagenes/torontocanada2.jpg" class="d-block w-100" alt="toronto" width="430px"
                         height="500px">
-                    <p>MOSCOW RUSSIA</p>
+                    <p>TORONTO CANADA</p>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/puentedelamujer.jpg" class="d-block w-100" alt="obelisco" width="430px"
-                        height="500px">
-                    <p>BUENOS AIRES</p>
+                    <img src="./imagenes/paris.jpg" class="d-block w-100" alt="paris" width="430px" height="500px">
+                    <p>PARIS FRANCIA</p>
                 </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </div>
-        <section class="cartas">
-
-            <div class="slider">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./imagenes/pasaport.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./imagenes/india.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./imagenes/maldivas.jpg" class="d-block w-100" alt="...">
-                        </div>
+                <div class="carousel-item">
+                    <div class="carousel-item active">
+                        <img src="./imagenes/Moscow-Russia.jpg" class="d-block w-100" alt="cancun" width="430px"
+                            height="500px">
+                        <p>MOSCOW RUSSIA</p>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/puentedelamujer.jpg" class="d-block w-100" alt="obelisco" width="430px"
+                            height="500px">
+                        <p>BUENOS AIRES</p>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+        </div>
+            <section class="cartas">
 
-            <div class="contenedor1">
-                <div class="imagenn1">
-                    <img src="./imagenes/hotel.jpg" alt="foto1">
+                <div class="slider">
+                    <img src="./imagenes/pasaport.jpg" alt="pasaporte">
                 </div>
-            </div>
 
-            <div class="contenedor2">
-                <div class="imagenn2">
-                    <img src="./imagenes/habitacionhotel.jpg" alt="foto2">
+                <div class="contenedor1">
+                    <div class="imagenn1">
+                        <img src="./imagenes/hotel.jpg" alt="foto1">
+                    </div>
                 </div>
-            </div>
 
-            <div class="contenedor3">
-                <div class="imagenn3">
-                    <img src="./imagenes/equipaje.jpg" alt="foto3">
+                <div class="contenedor2">
+                    <div class="imagenn2">
+                        <img src="./imagenes/habitacionhotel.jpg" alt="foto2">
+                    </div>
                 </div>
-            </div>
-            <div class="contenedor4">
-                <div class="imagenn4">
-                    <img src="./imagenes/foodd.jpg" alt="foto4">
+
+                <div class="contenedor3">
+                    <div class="imagenn3">
+                        <img src="./imagenes/equipaje.jpg" alt="foto3">
+                    </div>
                 </div>
-            </div>
+                <div class="contenedor4">
+                    <div class="imagenn4">
+                        <img src="./imagenes/foodd.jpg" alt="foto4">
+                    </div>
+                </div>
 
-            <div class="sobreTexto1">
-                <p>The best stays in luxury hotels.</p>
-            </div>
-            <div class="sobreTexto2">
-                <p>Prepare your trip!</p>
-            </div>
-            <div class="sobreTexto3">
-                <p>Services 24 hours a day.</p>
-            </div>
-            <div class="sobreTexto4">
-                <p>With services chosen as the best par excellence</p>
-            </div>
+                <div class="sobreTexto1">
+                    <p>The best stays in luxury hotels.</p>
+                </div>
+                <div class="sobreTexto2">
+                    <p>Prepare your trip!</p>
+                </div>
+                <div class="sobreTexto3">
+                    <p>Services 24 hours a day.</p>
+                </div>
+                <div class="sobreTexto4">
+                    <p>With services chosen as the best par excellence</p>
+                </div>
 
 
+            </section>
+
+            <!--     CONTENIDO PROMOCIONES  -->
+
+            <section class="contenidoPromociones" style="background-image: url(./imagenes/inviernoashe.jpg);">
+                <div class="titlePromocion">
+                    <h3>Do you want to travel around the world? Take a look!</h3>
+                </div>
+                <div class="promocion">
+                    <p>If you want to travel abroad and also enjoy a premium service chosen as the excellence of air travel,
+                        this is the opportunity to do it! Paris? USA? Dubai? Right here! Just by clicking on the image that
+                        appears on the screen below or by going to "Travel" that appears in our main menu, you will be
+                        redirected to our page with exclusive travel services 365 days a year! What are you waiting for?
+                        Make
+                        your reservation online right now! More than a plane trip, an unforgettable experience!
+                    </p>
+                </div>
+                <div class="imagenPromocion">
+                    <a href="./travell.html">
+                        <img src="./imagenes/niños-nieve.jpg" alt="pendejos">
+                        <!-- <img src="./imagenes/avionback.jpg" alt="avionback"> -->
+                    </a>
+                </div>
+                <!-- <div class="botonn">
+                <button type="button" class="btn btn-warning">Let´s go!</button> -->
+        </div>
         </section>
 
-        <!--     CONTENIDO PROMOCIONES  -->
 
-        <section class="contenidoPromociones">
-            <div class="titlePromocion">
-                <h3>Do you want to travel around the world? Take a look!</h3>
-            </div>
-            <div class="promocion">
-                <p>If you want to travel abroad and also enjoy a premium service chosen as the excellence of air travel,
-                    this is the opportunity to do it! Paris? USA? Dubai? Right here! Just by clicking on the image that
-                    appears on the screen below or by going to "Travel" that appears in our main menu, you will be
-                    redirected to our page with exclusive travel services 365 days a year! What are you waiting for?
-                    Make
-                    your reservation online right now! More than a plane trip, an unforgettable experience!
+        <!--   SECTION DESCUENTOS    -->
+
+        <section class="descuentos">
+            <div class="misDescuentos">
+                <h3>DESCUENTOS DE HASTA 50%</h3>
+                <p>Take advantage of these crazy discounts just for this crazy season!
                 </p>
             </div>
-            <div class="imagenPromocion">
-                <a href="./travell.html">
-                    <img src="./imagenes/niños-nieve.jpg" alt="pendejos">
-                    <!-- <img src="./imagenes/avionback.jpg" alt="avionback"> -->
-                </a>
+        </section>
+        <!-- SECTION COVID-19 -->
+
+        <section class="viajeSeguro">
+            <div class="safe">
+                <h2>TRAVEL SAFELY WITH US</h2>
             </div>
-            <!-- <div class="botonn">
-            <button type="button" class="btn btn-warning">Let´s go!</button> -->
-    </div>
-    </section>
+            <div class="p">
+                <p>You can count on us to travel safely, we are one of the most experienced global airlines during the
+                    COVID-19 crisis. So that there are no problems with your trip, please follow these instructions to the
+                    letter.
+                </p>
+            </div>
+            <div class="imagen1">
+                <img src="../imagenes/pasajera-con-barbijo-.jpg" alt="personabarbijo">
+            </div>
+            <div class="p1">
+                <p>One of the most important and mandatory things to take into account when traveling with our airlines is
+                    going to be the use of a chinstrap the time you are inside our aircraft.</p>
+            </div>
+            <div class="imagen2">
+                <img src="./imagenes/limpiezaavion2.jpg" alt="limpiandoavion">
+            </div>
+            <div class="pe2">
+                <p> Another of the measures carried out by our StartTravel airline is the sanitation of the entire aircraft
+                    including each of its rooms and seats. And thus prevent there from being any possible case of Covid 19.
+                </p>
+            </div>
+            <div class="imagen3">
+                <img src="./imagenes/hisopado.jpg" alt="azafatasconbarbijo">
+            </div>
+            <div class="p3">
+                <p>Under strict rules of the world health organization, any person who wants to travel abroad and with our
+                    high-quality services will have to be vaccinated with the Covid 19 vaccine and its respective doses.</p>
+            </div>
+        </section>
 
+        <!--   SECTION SOBRE NOSOTROS    -->
 
-    <!--   SECTION DESCUENTOS    -->
+        <section class="aboutUsT">
+            <div class="aboutUsTravel">
+                <h2>Want to know more about us?</h2>
+                <p>
+                    StartTravel is proud to be one of the youngest airlines flying to all six continents and, thanks to
+                    customer response to our offers, also one of the fastest growing airlines in the world. We connect more
+                    than 160 destinations in the world daily, with a fleet of state-of-the-art aircraft and an unbeatable
+                    level of service from our home and logistics center, the 5-star Virginia International Airport, in
+                    Virginia, USA.
+                    Today, travel consists of a mix of short, medium and long-haul segments with the highest number of
+                    travelers ever recorded. This is one of the best brands globally as an airline company today. </p>
+                <a href="./aboutuss.html">
+                    <img src="./imagenes/azafatass.jpg" alt="azafatas" width="600px" height="370px""> 
+                    </a>
+                <div class=" p2">
+                    <p class="text1">DO YOU WANT TO KNOW MORE ABOUT US?</p>
 
-    <section class="descuentos">
-        <div class="misDescuentos">
-            <h3>DESCUENTOS DE HASTA 50%</h3>
-            <p>Take advantage of these crazy discounts just for this crazy season!
-            </p>
-        </div>
-    </section>
-    <!-- SECTION COVID-19 -->
+                    <p class="text2">If you want to know more about us, you just have to click on the image on the left!</p>
+            </div>
 
-    <section class="viajeSeguro">
-        <div class="safe">
-            <h2>TRAVEL SAFELY WITH US</h2>
-        </div>
-        <div class="p">
-            <p>You can count on us to travel safely, we are one of the most experienced global airlines during the
-                COVID-19 crisis. So that there are no problems with your trip, please follow these instructions to the
-                letter.
-            </p>
-        </div>
-        <div class="imagen1">
-            <img src="../imagenes/pasajera-con-barbijo-.jpg" alt="personabarbijo">
-        </div>
-        <div class="p1">
-            <p>One of the most important and mandatory things to take into account when traveling with our airlines is
-                going to be the use of a chinstrap the time you are inside our aircraft.</p>
-        </div>
-        <div class="imagen2">
-            <img src="./imagenes/limpiezaavion2.jpg" alt="limpiandoavion">
-        </div>
-        <div class="pe2">
-            <p> Another of the measures carried out by our StartTravel airline is the sanitation of the entire aircraft
-                including each of its rooms and seats. And thus prevent there from being any possible case of Covid 19.
-            </p>
-        </div>
-        <div class="imagen3">
-            <img src="./imagenes/hisopado.jpg" alt="azafatasconbarbijo">
-        </div>
-        <div class="p3">
-            <p>Under strict rules of the world health organization, any person who wants to travel abroad and with our
-                high-quality services will have to be vaccinated with the Covid 19 vaccine and its respective doses.</p>
-        </div>
-    </section>
-
-    <!--   SECTION SOBRE NOSOTROS    -->
-
-    <section class="aboutUsT">
-        <div class="aboutUsTravel">
-            <h2>Want to know more about us?</h2>
-            <p>
-                StartTravel is proud to be one of the youngest airlines flying to all six continents and, thanks to
-                customer response to our offers, also one of the fastest growing airlines in the world. We connect more
-                than 160 destinations in the world daily, with a fleet of state-of-the-art aircraft and an unbeatable
-                level of service from our home and logistics center, the 5-star Virginia International Airport, in
-                Virginia, USA.
-                Today, travel consists of a mix of short, medium and long-haul segments with the highest number of
-                travelers ever recorded. This is one of the best brands globally as an airline company today. </p>
-            <a href="./aboutuss.html">
-                <img src="./imagenes/azafatass.jpg" alt="azafatas" width="600px" height="370px""> 
-                </a>
-            <div class=" p2">
-                <p class="text1">DO YOU WANT TO KNOW MORE ABOUT US?</p>
-
-                <p class="text2">If you want to know more about us, you just have to click on the image on the left!</p>
-        </div>
-
-        </div>
-    </section>
-
+            </div>
+        </section>
+    </main>
     <!--     FOOTER   -->
 
     <footer class="footer">
