--- a/paginas/helpp.html
+++ b/paginas/helpp.html
@@ -11,6 +11,8 @@
         content="If you need any help, you can contact us by leaving a message in our corresponding box." <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/7e5b2d153f.js" crossorigin="anonymous"></script>
+    <script defer src="../main.js"></script>
     <link rel="stylesheet" href="../css/helpp.css">
     <link rel="stylesheet" href="css/stylesc.css">
     <title>StartTravel Help</title>
@@ -19,23 +21,28 @@
 <body>
 
     <!--     HEADER HELP   -->
-
-    <header>
-        <nav class="gridContainer">
-            <div class="logo">
-                <a href="./index.html">
-                    <img src="../imagenes/starttravelazulado.png" alt="starttravelairways">
-                </a>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../paginas/travell.html">Travel</a></li>
-                    <li><a href="../paginas/aboutuss.html">About Us</a></li>
-                    <li><a href="../paginas/contactt.html">Contact Us</a></li>
-                    <li><a href="../paginas/helpp.html">Help</a></li>
-                </ul>
-            </div>
+    <header class="header">
+        <nav class="nav">
+            <a href="#" class="logo nav-link"><img src="../imagenes/starttravelazulado.png" alt=""></a>
+            <button class="nav-toggle" aria-label="Abrir menú">
+                <i class="fas fa-bars"></i>
+            </button>
+            <ul class="nav-menu">
+                <li class="nav-menu-item">
+                    <a href="../index.html" class="nav-menu-link nav-link">Home</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="./travell.html" class="nav-menu-link nav-link">Travel</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="./aboutuss.html" class="nav-menu-link nav-link">About Us</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="./contactt.html" class="nav-menu-link nav-link">Contact Us   </a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="helpp.html" class="nav-menu-link nav-link nav-menu-link_active">Help</a>
+                </li>
         </nav>
     </header>
 
@@ -70,31 +77,24 @@
     <!--     FOOTER   -->
 
     <footer class="footer">
-        <div class="pHome">
-            <h6>Home</h6>
+        <div class="home">
+            <p>
+                Home
+                Travel
+                About Us
+                Contact Us
+                Help
+            </p>
         </div>
-        <div class="pTravel">
-            <h6>Travel</h6>
-        </div>
-        <div class="pAbout">
-            <h6>About Us</h6>
-        </div>
-        <div class="pContact">
-            <h6>Contact Us</h6>
-        </div>
-        <div class="pHelp">
-            <h6>Help</h6>
-        </div>
-        <div class="ache6">
-            <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio provident ea reprehenderit
-                exercitationem soluta rem doloribus mollitia officiis recusandae, odio fuga fugit corrupti laudantium
-                sit expedita corporis nostrum ad! Deleniti!</h6>
-        </div>
+
         <div class="pf">
             <p>StartTravel AirWays all rights reserved
                 Travel safely and comfortably thanks to our services with our number 1 airline in the world.</p>
         </div>
     </footer>
+    
+    <!-- scripts -->
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
