--- a/paginas/travell.html
+++ b/paginas/travell.html
@@ -10,6 +10,8 @@
         content="Get your ticket right now with incredible discounts to travel with our number 1 company StartTravel.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/7e5b2d153f.js" crossorigin="anonymous"></script>
+    <script defer src="../main.js"></script>
     <link rel="stylesheet" href="../css/travell.css">
     <link rel="stylesheet" href="./css/stylesc.css">
     <title>Travel</title>
@@ -19,22 +21,29 @@
 
     <!--     HEADER TRAVEL  -->
 
-    <header>
-        <nav class="gridContainer">
-            <div class="logo">
-                <a href="./index.html">
-                    <img src="../imagenes/starttravelazulado.png" alt="starttravelairways">
-                </a>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../paginas/travell.html">Travel</a></li>
-                    <li><a href="../paginas/aboutuss.html">About Us</a></li>
-                    <li><a href="../paginas/contactt.html">Contact Us</a></li>
-                    <li><a href="../paginas/helpp.html">Help</a></li>
-                </ul>
-            </div>
+    <header class="header">
+        <nav class="nav">
+            <a href="#" class="logo nav-link"><img src="../imagenes/starttravelazulado.png" alt=""></a>
+            <button class="nav-toggle" aria-label="Abrir menú">
+                <i class="fas fa-bars"></i>
+            </button>
+            <ul class="nav-menu">
+                <li class="nav-menu-item">
+                    <a href="../index.html" class="nav-menu-link nav-link">Home</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="./travell.html" class="nav-menu-link nav-link">Travel</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="./aboutuss.html" class="nav-menu-link nav-link">About Us</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="./contactt.html" class="nav-menu-link nav-link">Contact Us   </a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="./helpp.html" class="nav-menu-link nav-link nav-menu-link_active">Help</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
@@ -49,16 +58,18 @@
 
         <!--     SECTION COMO VIAJAR -->
 
-        <section class="cartas">
+        <section class="cartass">
             <div class="ache4">
                 <h4>Organize your trip!</h4>
                 <div class="texto">
                     <p>Protect your travel plans and have complete peace of mind thanks to our travel insurance.
 
-                        Travel Guard® for Qatar Airways is designed to insure you against all expenses and inconveniences
+                        Travel Guard® for Qatar Airways is designed to insure you against all expenses and
+                        inconveniences
                         caused by emergencies and unforeseen events.
 
-                        Once the reservation is made, you can take out travel insurance through the "Manage a reservation"
+                        Once the reservation is made, you can take out travel insurance through the "Manage a
+                        reservation"
                         option.
 
                         Travel insurance is currently available to people residing in the following countries: France,
@@ -66,10 +77,12 @@
                         Kingdom.
                         Protect your travel plans and have complete peace of mind thanks to our travel insurance.
 
-                        Travel Guard® for Qatar Airways is designed to insure you against all expenses and inconveniences
+                        Travel Guard® for Qatar Airways is designed to insure you against all expenses and
+                        inconveniences
                         caused by emergencies and unforeseen events.
 
-                        Once the reservation is made, you can take out travel insurance through the "Manage a reservation"
+                        Once the reservation is made, you can take out travel insurance through the "Manage a
+                        reservation"
                         option.
 
                         Travel insurance is currently available to people residing in the following countries: France,
@@ -80,60 +93,28 @@
             <div class="card mb-3">
                 <img src="../imagenes/pasaport.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                        content. This content is a little bit longer.</p>
+                    <h5 class="card-title">PASAPORT</h5>
+                    <p class="card-text">Enter here and organize your trip as it should</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>
             <div class="card mb-3">
                 <img src="../imagenes/equipajevalija.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                        content. This content is a little bit longer.</p>
+                    <h5 class="card-title">
+                        SUITCASE </h5>
+                    <p class="card-text">Enter here and organize your trip as it should</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>
             <div class="card mb-3">
                 <img src="../imagenes/pasaportslider.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                        content. This content is a little bit longer.</p>
+                    <h5 class="card-title">FIND YOUR DESTINY</h5>
+                    <p class="card-text">Find your destination with our official website</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>
-
-            <!-- <div class="contenedor1">
-                <div class="card" style="width: 240px;"> <img src="../imagenes/pasaport.jpg" class="card-img-top"  alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Holanda</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                            card's content.</p> <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="contenedor2">
-                <div class="card" style="width: 240px;"> <img src="../imagenes/equipajevalija.jpg" class="card-img-top"
-                        alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Canada</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                            card's content.</p> <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div> 
-                </div>
-            </div>
-
-            <div class="contenedor3">
-                <div class="card" style="width: 240px;"> <img src="../imagenes/chilling.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Dubai</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p> <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div> -->
         </section>
 
         <!--     DESCUENTOS   -->
@@ -153,10 +134,13 @@
                 <h4>Enter your details to start your journey!</h4>
             </div>
             <div class="parrafo">
-                You are already in the last step to travel with our exclusive services! We want your trip with StartTravel
-                to be pleasant and hassle-free. From the moment you make your reservation until you return home, we want to
+                You are already in the last step to travel with our exclusive services! We want your trip with
+                StartTravel
+                to be pleasant and hassle-free. From the moment you make your reservation until you return home, we want
+                to
                 make sure that no details are left to chance so that you can remember the perfect trip. We would love to
-                have more information about your trip with StartTravel. For this reason, select and complete here below the
+                have more information about your trip with StartTravel. For this reason, select and complete here below
+                the
                 information that is specified to be able to fly without problem with our StartTravel airlines.
             </div>
 
@@ -251,19 +235,22 @@
             <div class="aboutUsTravel">
                 <h2>Want to know more about us?</h2>
                 <p>StartTravel is proud to be one of the youngest airlines flying to all six continents and, thanks to
-                    customer response to our offers, also one of the fastest growing airlines in the world. We connect more
-                    than 160 destinations in the world daily, with a fleet of state-of-the-art aircraft and an unbeatable
+                    customer response to our offers, also one of the fastest growing airlines in the world. We connect
+                    more
+                    than 160 destinations in the world daily, with a fleet of state-of-the-art aircraft and an
+                    unbeatable
                     level of service from our home and logistics center, the 5-star Virginia International Airport, in
                     Virginia, USA.
                     Today, travel consists of a mix of short, medium and long-haul segments with the highest number of
                     travelers ever recorded. This is one of the best brands globally as an airline company today.</p>
-                <a href="../aboutuss.html">
+                <a href="./aboutuss.html">
                     <img src="../imagenes/azafatass.jpg" alt="azafatas" width="600px" height="370px""> 
                     </a>
                 <div class=" p2">
                     <p class="text1">DO YOU WANT TO KNOW MORE ABOUT US?</p>
 
-                    <p class="text2">If you want to know more about us, you just have to click on the image on the left!</p>
+                    <p class="text2">If you want to know more about us, you just have to click on the image on the left!
+                    </p>
             </div>
 
             </div>
@@ -273,31 +260,24 @@
     <!--     FOOTER   -->
 
     <footer class="footer">
-        <div class="pHome">
-            <h6>Home</h6>
+        <div class="home">
+            <p>
+                Home
+                Travel
+                About Us
+                Contact Us
+                Help
+            </p>
         </div>
-        <div class="pTravel">
-            <h6>Travel</h6>
-        </div>
-        <div class="pAbout">
-            <h6>About Us</h6>
-        </div>
-        <div class="pContact">
-            <h6>Contact Us</h6>
-        </div>
-        <div class="pHelp">
-            <h6>Help</h6>
-        </div>
-        <div class="ache6">
-            <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio provident ea reprehenderit
-                exercitationem soluta rem doloribus mollitia officiis recusandae, odio fuga fugit corrupti laudantium
-                sit expedita corporis nostrum ad! Deleniti!</h6>
-        </div>
+
         <div class="pf">
             <p>StartTravel AirWays all rights reserved
                 Travel safely and comfortably thanks to our services with our number 1 airline in the world.</p>
         </div>
     </footer>
+    
+    <!-- scripts -->
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
